Scafolded the movie model

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesMvxContext": "Server=(localdb)\\mssqllocaldb;Database=MoviesMvxContext-aad47e06-184f-4cb6-96be-b1c3ad809d16;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
